--- a/PartsOfSpeech.html
+++ b/PartsOfSpeech.html
@@ -38,19 +38,39 @@
     <div>
         <h1 id="00"><a href="index.html">Part of speech</a></h1>
         <ol>
-            <li><a href="#01">Basic English</a></li>
-            <li><a href="#02">Present Simple Tense</a></li>
-            <li><a href="#03">Present Continuous Tense</a></li>
-            <li><a href="#04">Present Perfect Tense</a></li>
-            <li><a href="#05">Present Perfect Continuous Tense</a></li>
-            <li><a href="#06">Past Simple Tense</a></li>
-            <li><a href="#07">Past Continuous Tense</a></li>
-            <li><a href="#08">Past Perfect Tense</a></li>
-            <li><a href="#09">Past Perfect Continuous Tense</a></li>
-            <li><a href="#10">Future Simple Tense</a></li>
-            <li><a href="#11">Future Continuous Tense</a></li>
-            <li><a href="#12">Future Perfect Tense</a></li>
-            <li><a href="#13">Future Perfect Continuous Tense</a></li>
+            <li><a href="#01">Nouns</a></li>
+            <li><a href="#02">Adjectives</a></li>
+            <li><a href="#03">Adverbs</a></li>
+            <li><a href="#04">Prepositions</a></li>
+            <li><a href="#05">Conjunctions</a></li>
+        </ol>
+    </div>
+
+
+    <div>
+        <h1>Nouns</h1>
+        <h3>1. Introduction to Nouns</h3>
+        <ol>
+            <li>People: [a man, a teacher, Fanny, Mr.Smith]</li>
+            <li>Places: [a house, a school, London, a beach]</li>
+            <li>Things: [a shoe, a marker, a dog, a pizza]</li>
+            <li>Abstract: [ideas, concepts, emotions, love, time, religion, rules]</li>
+        </ol>
+        <h3>2. Singular and Plural Nouns</h3>
+        <ol>
+            <li></li>
+        </ol>
+        <h3>3. Irregular Plural Nouns</h3>
+        <ol>
+            <li></li>
+        </ol>
+        <h3>4. Compound Nouns</h3>
+        <ol>
+            <li></li>
+        </ol>
+        <h3>5. Countable and Uncountable Nouns</h3>
+        <ol>
+            <li></li>
         </ol>
     </div>
 </body>
