--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div>
         <h1>List Of Contents</h1>
         <ol>
+            <li><a href="Basic.html">Basic</a></li>
             <li><a href="Tense.html">Tense</a></li>
             <li><a href="PartsOfSpeech.html">Parts of speech</a></li>
         </ol>
