--- a/Tense.html
+++ b/Tense.html
@@ -38,24 +38,107 @@
     <div>
         <h1 id="00"><a href="index.html">Tense</a></h1>
         <ol>
-            <li><a href="#02">Present Simple Tense</a></li>
-            <li><a href="#03">Present Continuous Tense</a></li>
-            <li><a href="#04">Present Perfect Tense</a></li>
-            <li><a href="#05">Present Perfect Continuous Tense</a></li>
-            <li><a href="#06">Past Simple Tense</a></li>
-            <li><a href="#07">Past Continuous Tense</a></li>
-            <li><a href="#08">Past Perfect Tense</a></li>
-            <li><a href="#09">Past Perfect Continuous Tense</a></li>
-            <li><a href="#10">Future Simple Tense</a></li>
-            <li><a href="#11">Future Continuous Tense</a></li>
-            <li><a href="#12">Future Perfect Tense</a></li>
-            <li><a href="#13">Future Perfect Continuous Tense</a></li>
+            <li><a href="#01">Present Simple Tense</a></li>
+            <li><a href="#02">Present Continuous Tense</a></li>
+            <li><a href="#03">Present Perfect Tense</a></li>
+            <li><a href="#04">Present Perfect Continuous Tense</a></li>
+            <li><a href="#05">Past Simple Tense</a></li>
+            <li><a href="#06">Past Continuous Tense</a></li>
+            <li><a href="#07">Past Perfect Tense</a></li>
+            <li><a href="#08">Past Perfect Continuous Tense</a></li>
+            <li><a href="#09">Future Simple Tense</a></li>
+            <li><a href="#10">Future Continuous Tense</a></li>
+            <li><a href="#11">Future Perfect Tense</a></li>
+            <li><a href="#12">Future Perfect Continuous Tense</a></li>
         </ol>
     </div>
 
 
     <div>
-        <h1 id="03"><a href="#00">Present Continuous Tense</a></h1>
+        <h1 id="01"><a href="#00">Present Simple Tense</a></h1>
+        <h3>1. Facts, Truths, Generalizations</h3>
+        <ol>
+            <li>The sun <i>is</i> bright.</li>
+            <li>Pigs <i>don't fly</i>.</li>
+            <li>Cats <i>are</i> better than dogs.</li>
+            <li>It<i>'s</i> cold in winter.</li>
+        </ol>
+        <h3>2. Habits and Routines</h3>
+        <ol>
+            <li>I always <i>eat</i> lunch at noon.</li>
+            <li>You <i>play</i> games every day.</li>
+            <li>Seth start<i>s</i> work at 9 a.m. daily.</li>
+            <li>They <i>study</i> English every Monday.</li>
+        </ol>
+        <h3>3. Non-Continuous Verbs</h3>
+        <ol>
+            <li>I <i>love</i> my mon.</li>
+            <li>It smell<i>s</i> good.</li>
+            <li>Kelly feel<i>s</i> happy.</li>
+            <li>They <i>need</i> help.</li>
+        </ol>
+        <h3>4. Near-Future / Scheduled-Events</h3>
+        <ol>
+            <li>I <i>have</i> class at 6 p.m.</li>
+            <li>Lisa arrive<i>s</i> on Sunday.</li>
+            <li>We <i>start</i> work soon.</li>
+            <li>My students <i>come</i> tomorrow.</li>
+        </ol>
+        <h3>5. Negative Usage</h3>
+        <ol>
+            <li>Mike eats bread.</li>
+            <li>Mike <i>doesn't eat</i> bread.</li>
+            <li>You swim well.</li>
+            <li>You <i>don't swim</i> well.</li>
+        </ol>
+        <h3>6. Question-Form</h3>
+        <ol>
+            <li>They live here.</li>
+            <li><i>Do</i> they <i>live</i> here? Yes, they do. | No, they don't.</li>
+            <li>He plays soccer.</li>
+            <li><i>Does</i> he <i>play</i> soccer? Yes, he does. | No, he doesn't.</li>
+        </ol>
+        <h3>7. Advanced Example Be-Verbs</h3>
+        <ol>
+            <li>She <i>is</i> at school.</li>
+            <li>They <i>are</i> 20 years old.</li>
+            <li>His father <i>is</i> busy.</li>
+            <li>We <del>isn't</del> <i>aren't</i> good friends.</li>
+            <li><del>Are</del> <i>Is</i> John a teacher? Yes, he is. | No, he isn't.</li>
+            <li>It <del>am</del> <i>is</i> a puppy.</li>
+        </ol>
+        <h3>8. Advanced Example Common-Verbs</h3>
+        <ol>
+            <li>He <i>likes</i> his dinner.</li>
+            <li>My students <i>need</i> books.</li>
+            <li>I <i>live</i> in London.</li>
+            <li>He doesn't <del>likes</del> <i>like</i> beer.</li>
+            <li><del>Do</del> <i>Does</i> he eat candy? Yes, he does. | No, he doesn't.</li>
+            <li>Sam <del>is</del> play<i>s</i> computer games.</li>
+        </ol>
+        <h3>9. Advanced Example Habits And Routines</h3>
+        <ol>
+            <li>We <i>take</i> the bus every day.</li>
+            <li>He <i>goes</i> to school every morning.</li>
+            <li>Lizzy <i>doesn't play</i> tennis.</li>
+            <li>They <del>watches</del> <i>watch</i> TV at night.</li>
+            <li>Does he <del>plays</del> <i>play</i> soccer every week? Yes, he does. | No, he doesn't.</li>
+            <li>He always forget<i>s</i> his book.</li>
+        </ol>
+        <h3>10. Advanced Example Near-Future / Scheduled-Events</h3>
+        <ol>
+            <li>The air plane <i>leaves</i> tonight.</li>
+            <li>Does the movie <i>start</i> soon? Yes, it does. | No, it doesn't.</li>
+            <li>Vicky <i>works</i> tomorrow.</li>
+            <li>He <del>do</del> leave<i>s</i> at 3:30 p.m.</li>
+            <li>They don't <del>starts</del> <i>start</i> school today.</li>
+            <li><del>Does</del> <i>Do</i> we eat at noon?</li>
+        </ol>
+    </div>
+
+
+    <div>
+        <h1 id="02"><a href="#00">Present Continuous Tense</a></h1>
         <h3>1. Action happening Now</h3>
         <ol>
             <li>He <i>is watching</i> a movie.</li>
@@ -149,7 +232,7 @@
 
 
     <div>
-        <h1 id="04"><a href="#00">Present Perfect Tense</a></h1>
+        <h1 id="03"><a href="#00">Present Perfect Tense</a></h1>
         <h3>1. How to use past participle [been, seen, and gone].</h3>
         <ol>
             <li>I <i>have been</i> to Canada.</li>
@@ -235,7 +318,7 @@
 
 
     <div>
-        <h1 id="05"><a href="#00">Present Perfect Continuous Tense</a></h1>
+        <h1 id="04"><a href="#00">Present Perfect Continuous Tense</a></h1>
         <h3>1. How to use [since and for].</h3>
         <ol>
             <li>Charles has been studying English <i>for an hour</i>.</li>
@@ -317,7 +400,7 @@
 
 
     <div>
-        <h1 id="06"><a href="#00">Past Simple Tense</a></h1>
+        <h1 id="05"><a href="#00">Past Simple Tense</a></h1>
         <h3>1. Be-Verb Was/Were</h3>
         <ol>
             <li>I <i>was</i> scared.</li>
@@ -419,7 +502,7 @@
 
 
     <div>
-        <h1 id="07"><a href="#00">Past Continuous Tense</a></h1>
+        <h1 id="06"><a href="#00">Past Continuous Tense</a></h1>
         <h3>1. Past Continuous Tense</h3>
         <ol>
             <li>I <i>was walking</i> in the park in the evening.</li>
@@ -499,7 +582,7 @@
 
 
     <div>
-        <h1 id="08"><a href="#00">Past Perfect Tense</a></h1>
+        <h1 id="07"><a href="#00">Past Perfect Tense</a></h1>
         <h3>1. Past Perfect Tense Mix(ผสม) Past Simple Tense</h3>
         <ol>
             <li>I had visited China, <i>before</i> I moved there.</li>
@@ -565,7 +648,7 @@
 
 
     <div>
-        <h1 id="09"><a href="#00">Past Perfect Continuous Tense</a></h1>
+        <h1 id="08"><a href="#00">Past Perfect Continuous Tense</a></h1>
         <h3>1. How To Use [for].</h3>
         <ol>
             <li>I had been waiting for the bus <i>for 2 hours</i> before it arrived.</li>
@@ -629,7 +712,7 @@
 
 
     <div>
-        <h1 id="10"><a href="#00">Future Simple Tense</a></h1>
+        <h1 id="09"><a href="#00">Future Simple Tense</a></h1>
         <h3>1. Will + V.inf</h3>
         <ol>
             <li>I'm cold. I <i>will close</i> the window.</li>
@@ -699,7 +782,7 @@
 
 
     <div>
-        <h1 id="11"><a href="#00">Future Continuous Tense</a></h1>
+        <h1 id="10"><a href="#00">Future Continuous Tense</a></h1>
         <h3>1. #1</h3>
         <ol>
             <li>I <i>will be taking</i> the test soon.</li>
@@ -765,7 +848,7 @@
 
 
     <div>
-        <h1 id="12"><a href="#00">Future Perfect Tense</a></h1>
+        <h1 id="11"><a href="#00">Future Perfect Tense</a></h1>
         <h3>1. Declarative sentence</h3>
         <ol>
             <li>The snow <i>will have stopped</i> by April. [by, Preposition, เมื่อถึง]</li>
@@ -817,7 +900,7 @@
 
 
     <div>
-        <h1 id="13"><a href="#00">Future Perfect Continuous Tense</a></h1>
+        <h1 id="12"><a href="#00">Future Perfect Continuous Tense</a></h1>
         <h3>1. Declarative sentence</h3>
         <ol>
             <li>She <i>will have been living</i> in Ireland for 10 years at that point.</li>
