--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         div ol li a:hover {
             text-decoration: underline;
         }
+        div h1 a {
+            text-decoration: none;
+            color: Green;
+        }
+        div h1 a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -33,7 +40,6 @@
         <ol>
             <li><a href="Basic.html">Basic</a></li>
             <li><a href="Tense.html">Tense</a></li>
-            <li><a href="PartsOfSpeech.html">Parts of speech</a></li>
         </ol>
     </div>
 </body>
