--- a/Basic.html
+++ b/Basic.html
@@ -39,8 +39,9 @@
         <h1 id="00"><a href="index.html">Basic</a></h1>
         <ol>
             <li><a href="#01">Basic English</a></li>
-            <li><a href="#02">Can I? Could I? May I?</a></li>
-            <li><a href="#03">I like to / I don’t like to </a></li>
+            <li><a href="#02">Can I / Could I / May I</a></li>
+            <li><a href="#03">I like / I like to</a></li>
+            <li><a href="#04">What's up?</a></li>
         </ol>
     </div>
 
@@ -232,35 +233,120 @@
 
 
     <div>
-        <h1 id="02"><a href="#00">Can I? Could I? May I?</a></h1>
-        <h3>I like ...</h3>
+        <h1 id="02"><a href="#00">Can I / Could I / May I</a></h1>
+        <h3>Can I ... ?</h3>
         <ol>
-            <li></li>
+            <li><i>Can I</i> help you?</li>
+            <li><i>Can I</i> see you again?</li>
+            <li><i>Can I</i> have some water?</li>
+            <li><i>Can I</i> call you later?</li>
+            <li><i>Can I</i> borrow some money?</li>
+            <li><i>Can I</i> go?</li>
+            <li><i>Can I</i> speak to Mr.kim?</li>
+            <li><i>Can I</i> go to the bathroom?</li>
+        </ol>
+        <h3>Could I ... ?</h3>
+        <ol>
+            <li><i>Could I</i> help you?</li>
+            <li><i>Could I</i> see you again?</li>
+            <li><i>Could I</i> have some water?</li>
+            <li><i>Could I</i> call you later?</li>
+            <li><i>Could I</i> borrow some money?</li>
+            <li><i>Could I</i> go?</li>
+            <li><i>Could I</i> speak to Mr.kim?</li>
+            <li><i>Could I</i> go to the bathroom?</li>
+        </ol>
+        <h3>May I ... ?</h3>
+        <ol>
+            <li><i>May I</i> help you?</li>
+            <li><i>May I</i> see you again?</li>
+            <li><i>May I</i> have some water?</li>
+            <li><i>May I</i> call you later?</li>
+            <li><i>May I</i> borrow some money?</li>
+            <li><i>May I</i> go?</li>
+            <li><i>May I</i> speak to Mr.kim?</li>
+            <li><i>May I</i> go to the bathroom?</li>
         </ol>
     </div>
 
 
     <div>
-        <h1 id="03"><a href="#00">I like to / I don’t like to</a></h1>
+        <h1 id="03"><a href="#00">I like / I like to</a></h1>
         <h3>I like ...</h3>
         <ol>
-            <li></li>
+            <li><i>I like</i> cookies.</li>
+            <li><i>I like</i> English.</li>
+            <li><i>I like</i> you.</li>
+            <li><i>I like</i> dogs.</li>
+            <li><i>I like</i> school.</li>
+            <li><i>I like</i> dresses.</li>
+            <li><i>I like</i> pizza.</li>
+            <li><i>I like</i> money.</li>
+            <li><i>I like</i> vacations.</li>
+            <li><i>I like</i> food.</li>
         </ol>
         <h3>I like to ...</h3>
         <ol>
-            <li></li>
+            <li><i>I like to</i> dance.</li>
+            <li><i>I like to</i> sing.</li>
+            <li><i>I like to</i> study.</li>
+            <li><i>I like to</i> shop.</li>
+            <li><i>I like to</i> eat.</li>
+            <li><i>I like to</i> exercise.</li>
+            <li><i>I like to</i> walk.</li>
+            <li><i>I like to</i> drink coffee.</li>
+            <li><i>I like to</i> meet friends.</li>
+            <li><i>I like to</i> travel.</li>
         </ol>
         <h3>I don't like ...</h3>
         <ol>
-            <li>I don't like spiders.</li>
-            <li>I don't like snow.</li>
-            <li>I don't like winter.</li>
-            <li>I don't like chicken feet.</li>
-            <li>I don't like heels.</li>
+            <li><i>I don't like</i> sushi.</li>
+            <li><i>I don't like</i> math.</li>
+            <li><i>I don't like</i> him.</li>
+            <li><i>I don't like</i> snakes.</li>
+            <li><i>I don't like</i> spiders.</li>
+            <li><i>I don't like</i> snow.</li>
+            <li><i>I don't like</i> winter.</li>
+            <li><i>I don't like</i> chicken feet.</li>
+            <li><i>I don't like</i> heels.</li>
         </ol>
         <h3>I don't like to ...</h3>
         <ol>
-            <li></li>
+            <li><i>I don't like to</i> run.</li>
+            <li><i>I don't like to</i> study.</li>
+            <li><i>I don't like to</i> drink.</li>
+            <li><i>I don't like to</i> fight.</li>
+            <li><i>I don't like to</i> work.</li>
+            <li><i>I don't like to</i> hike.</li>
+            <li><i>I don't like to</i> wash dishes.</li>
+            <li><i>I don't like to</i> clean up.</li>
+            <li><i>I don't like to</i> eat alnoe.</li>
+        </ol>
+        <h3>other</h3>
+        <ol>
+            <li>I like ! I don't like</li>
+            <li>I enjoy ! I dislike</li>
+            <li>I love ! I hate</li>
+        </ol>
+    </div>
+
+
+    <div>
+        <h1 id="04"><a href="#00">What's up?</a></h1>
+        <ol>
+            <li>
+                A: Hey Susie. What's up? <br>
+                B: Nothing much. <br>
+                A: You look upset. What's up? <br>
+                B: I lost my wallet.
+            </li>
+            <li>
+                A: Long time no see. What's up? <br>
+                B: I was surprised to get your call. What's up? <br>
+                A: What's up with you these days? <br>
+                B: Yes, I'm fine.
+            </li>
+            <li>A: Are you crying? What's up?</li>
         </ol>
     </div>
 </body>
